# image_processing_cpp

./: .clang-format  .gitignore  Makefile  README.md  docker-compose-deploy-cloud.yml  docker-compose-deploy-local-valgrind.yml  docker-compose-deploy-local.yml  docker-compose-deploy.yml  docker-compose-graphite.yml  statsd.config.js
docs/measurements/cloud/: README.md
docs/measurements/server/: README.md
grafana_config/: dashboard.json
src/broker/: CMakeLists-docker.txt  CMakeLists.txt  Dockerfile  Dockerfile-valgrind
src/broker/src/: main.cpp
src/broker/src/config_reader/: config_reader.cpp  config_reader.h
src/broker/src/protocol/: protocol.cpp  protocol.h
src/format_worker/: CMakeLists-docker.txt  CMakeLists.txt  Dockerfile  Dockerfile-valgrind
src/format_worker/src/: main.cpp
src/format_worker/src/config_reader/: config_reader.cpp  config_reader.h
src/format_worker/src/protocol/: protocol.cpp  protocol.h
src/image_processing/: CMakeLists.txt
src/image_processing/src/: main.cpp
src/image_processing/src/image_manipulation/: change_format.cpp  change_resolution.cpp  crop.cpp
src/manager/: CMakeLists-docker.txt  CMakeLists.txt  Dockerfile  Dockerfile-valgrind
src/manager/src/: main.cpp
src/manager/src/config_reader/: config_reader.cpp  config_reader.h
src/manager/src/protocol/: protocol.cpp  protocol.h
src/resolution_worker/: CMakeLists-docker.txt  CMakeLists.txt  Dockerfile  Dockerfile-valgrind
src/resolution_worker/resources/: config.json
src/resolution_worker/src/: main.cpp
src/resolution_worker/src/config_reader/: config_reader.cpp  config_reader.h
src/resolution_worker/src/protocol/: protocol.cpp  protocol.h
src/shared/: CMakeLists.txt  constants.h
src/shared/image_manipulation/: change_format.cpp  change_resolution.cpp  crop.cpp
src/size_worker/: CMakeLists-docker.txt  CMakeLists.txt  Dockerfile  Dockerfile-valgrind
src/size_worker/resources/: config.json
src/size_worker/src/: main.cpp
src/size_worker/src/config_reader/: config_reader.cpp  config_reader.h
src/size_worker/src/protocol/: protocol.cpp  protocol.h
